{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 134,
  "lineage": "63d41733-128c-719e-dd71-c58a78151743",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "ingress_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.201.112.228",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-19T16:50:18.284-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/carbonsaurus-dev/global/addresses/carbon-re-dev-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "carbon-re-dev-static-ip",
            "prefix_length": 0,
            "project": "carbonsaurus-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/addresses/carbon-re-dev-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_office_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_proxy_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_to_gke_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-19T16:51:15.601-07:00",
            "deny": [],
            "description": "Allow SSH (TCP 22) from Bastion VM to GKE nodes",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbonsaurus-dev/global/firewalls/carbon-re-dev-bastion-to-gke",
            "log_config": [],
            "name": "carbon-re-dev-bastion-to-gke",
            "network": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "priority": 1000,
            "project": "carbonsaurus-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/firewalls/carbon-re-dev-bastion-to-gke",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "carbon-re-dev-general-fw"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "carbon-re-dev-gke-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_network.carbon_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-19T16:51:03.979-07:00",
            "deny": [],
            "description": "Allow all outbound traffic",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbonsaurus-dev/global/firewalls/carbon-re-dev-egress-all",
            "log_config": [],
            "name": "carbon-re-dev-egress-all",
            "network": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "priority": 1000,
            "project": "carbonsaurus-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/firewalls/carbon-re-dev-egress-all",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "carbon-re-dev-general-fw"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_network.carbon_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-19T16:51:15.488-07:00",
            "deny": [],
            "description": "Allow SSH (TCP 22) from VPC CIDR",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbonsaurus-dev/global/firewalls/carbon-re-dev-ingress-ssh",
            "log_config": [],
            "name": "carbon-re-dev-ingress-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "priority": 1000,
            "project": "carbonsaurus-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/firewalls/carbon-re-dev-ingress-ssh",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "carbon-re-dev-general-fw"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_network.carbon_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_vpc_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-19T16:51:03.938-07:00",
            "deny": [],
            "description": "Allow all traffic from remote VPC CIDR",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/carbonsaurus-dev/global/firewalls/carbon-re-dev-ingress-vpc",
            "log_config": [],
            "name": "carbon-re-dev-ingress-vpc",
            "network": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "priority": 1000,
            "project": "carbonsaurus-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/firewalls/carbon-re-dev-ingress-vpc",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "carbon-re-dev-general-fw"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_network.carbon_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.47.83.177",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-19T16:50:41.032-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/carbonsaurus-dev/regions/asia-northeast3/addresses/carbon-re-dev-vpc-nat-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "carbon-re-dev-vpc-nat-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "carbonsaurus-dev",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/regions/asia-northeast3/addresses/carbon-re-dev-vpc-nat-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/regions/asia-northeast3/routers/carbon-re-dev-vpc-nat-router"
            ]
          },
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "carbon_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "mtu": 0,
            "name": "carbon-re-dev-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1269318475809482430",
            "numeric_id": "1269318475809482430",
            "project": "carbonsaurus-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc"
          },
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-19T16:51:04.196-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/carbonsaurus-dev/regions/asia-northeast3/routers/carbon-re-dev-vpc-nat-router",
            "name": "carbon-re-dev-vpc-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "project": "carbonsaurus-dev",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/regions/asia-northeast3/routers/carbon-re-dev-vpc-nat-router"
          },
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_network.carbon_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "carbonsaurus-dev/asia-northeast3/carbon-re-dev-vpc-nat-router/carbon-re-dev-vpc-nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "carbon-re-dev-vpc-nat-config",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/regions/asia-northeast3/addresses/carbon-re-dev-vpc-nat-ip"
            ],
            "project": "carbonsaurus-dev",
            "region": "asia-northeast3",
            "router": "carbon-re-dev-vpc-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/regions/asia-northeast3/subnetworks/private-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_address.nat_ip",
            "module.network.google_compute_network.carbon_network",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-19T16:51:04.642-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.3.1",
            "id": "projects/carbonsaurus-dev/regions/asia-northeast3/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "carbonsaurus-dev",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.10.0.0/16",
                "range_name": "pod-ip-range"
              },
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "service-ip-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/regions/asia-northeast3/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7648241171259909767
          },
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_network.carbon_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-19T16:51:04.892-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/carbonsaurus-dev/regions/asia-northeast3/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "carbonsaurus-dev",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/regions/asia-northeast3/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3202133318983673479
          },
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_network.carbon_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.89.148.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-03-19T16:51:03.918-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/carbonsaurus-dev/global/addresses/carbon-re-dev-peering-private-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "carbon-re-dev-peering-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/networks/carbon-re-dev-vpc",
            "prefix_length": 24,
            "project": "carbonsaurus-dev",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/carbonsaurus-dev/global/addresses/carbon-re-dev-peering-private-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "data.terraform_remote_state.base_iam",
            "module.iam.google_project_iam_binding.cloud_sql_proxy",
            "module.iam.google_project_iam_member.gcr_artifact_registry_reader",
            "module.iam.google_project_iam_member.gcr_pull_secret_accessor",
            "module.iam.google_project_iam_member.gke_sa_logging_log_writer",
            "module.iam.google_project_iam_member.gke_sa_monitoring_viewer",
            "module.iam.google_project_service.artifactregistry",
            "module.iam.google_project_service.compute",
            "module.iam.google_project_service.container",
            "module.iam.google_project_service.secretmanager",
            "module.iam.google_project_service.servicenetworking",
            "module.iam.google_project_service.sqladmin",
            "module.iam.google_service_account.cloud_sql_proxy",
            "module.iam.google_service_account.external_es",
            "module.iam.google_service_account.gcr_pull",
            "module.iam.google_service_account.gke_service_account",
            "module.iam.google_service_account_key.cloud_sql_proxy",
            "module.iam.google_service_account_key.external_es_key",
            "module.iam.google_service_account_key.gcr_pull_key",
            "module.network.google_compute_network.carbon_network"
          ]
        }
      ]
    }
  ]
}